bp: Enable node roles to be pluggable
https://github.com/elastic/elasticsearch/commit/aa12af8a3c4